[gd_scene load_steps=5 format=3 uid="uid://d1iejtgetho84"]

[ext_resource type="Script" path="res://src/editor/grid_area_marker/grid_area_marker.gd" id="1_oaoby"]
[ext_resource type="Shader" path="res://src/editor/grid_area_marker/grid_area_marker.gdshader" id="2_kghm2"]
[ext_resource type="Texture2D" uid="uid://dtiv81ct8e1oe" path="res://src/editor/grid_area_marker/checkerboard.png" id="3_t58mq"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1ryw5"]
resource_local_to_scene = true
shader = ExtResource("2_kghm2")
shader_parameter/scale = Vector2(1, 1)
shader_parameter/offset = Vector2(0, 0)

[node name="GridAreaMarker" type="Node2D"]
script = ExtResource("1_oaoby")

[node name="Squisher" type="Node2D" parent="."]
unique_name_in_owner = true
scale = Vector2(1, 0.5)

[node name="Polygon2D" type="Polygon2D" parent="Squisher"]
unique_name_in_owner = true
rotation = 0.785398
color = Color(0.207843, 0.207843, 0.207843, 0.764706)
polygon = PackedVector2Array(0, 0, 1, 0, 1, 1, 0, 1)

[node name="Checkerboard" type="Sprite2D" parent="Squisher"]
unique_name_in_owner = true
texture_filter = 1
texture_repeat = 2
material = SubResource("ShaderMaterial_1ryw5")
rotation = 0.785398
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_t58mq")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 2, 2)

[node name="HorizontalLines" type="Node2D" parent="Squisher"]
unique_name_in_owner = true
rotation = 0.785398

[node name="Line2D" type="Line2D" parent="Squisher/HorizontalLines"]
points = PackedVector2Array(0, 0, 1, 0)
width = 0.2
default_color = Color(0.164706, 1, 0.356863, 0.698039)

[node name="Line2D2" type="Line2D" parent="Squisher/HorizontalLines"]
points = PackedVector2Array(0, 1, 1, 1)
width = 0.2
default_color = Color(0.164706, 1, 0.356863, 0.698039)

[node name="VerticalLines" type="Node2D" parent="Squisher"]
unique_name_in_owner = true
rotation = 0.785398

[node name="Line2D" type="Line2D" parent="Squisher/VerticalLines"]
points = PackedVector2Array(0, 0, 0, 1)
width = 0.2
default_color = Color(0.164706, 1, 0.356863, 0.698039)
joint_mode = 1

[node name="Line2D2" type="Line2D" parent="Squisher/VerticalLines"]
points = PackedVector2Array(1, 0, 1, 1)
width = 0.2
default_color = Color(0.164706, 1, 0.356863, 0.698039)
